# cffdrs_py

./: .gitignore  README.md  pyproject.toml
cffdrs/: __init__.py  buildup_index_raster.py  fwi.py  fwi_numpy.py  hffmc.py
cffdrs/raster/: __init__.py  buildup_index_raster.py
cffdrs/tests/: profile_buildup_index_raster.py  test_buildup_index_raster.py
cffdrs/tests/profiles/: 2000m_profile_iter_0.txt  2000m_profile_iter_1.txt  2000m_profile_iter_2.txt  2000m_profile_iter_3.txt  2000m_profile_iter_4.txt  2000m_profile_iter_5.txt  2000m_profile_iter_6.txt  2000m_profile_iter_7.txt  2000m_profile_iter_8.txt  2000m_profile_iter_9.txt  numba_2000m_profile_iter_0.txt  numba_2000m_profile_iter_1.txt  numba_2000m_profile_iter_2.txt  numba_2000m_profile_iter_3.txt  numba_2000m_profile_iter_4.txt  numba_2000m_profile_iter_5.txt  numba_2000m_profile_iter_6.txt  numba_2000m_profile_iter_7.txt  numba_2000m_profile_iter_8.txt  numba_2000m_profile_iter_9.txt  vec_2000m_profile_iter_0.txt  vec_2000m_profile_iter_1.txt  vec_2000m_profile_iter_2.txt  vec_2000m_profile_iter_3.txt  vec_2000m_profile_iter_4.txt  vec_2000m_profile_iter_5.txt  vec_2000m_profile_iter_6.txt  vec_2000m_profile_iter_7.txt  vec_2000m_profile_iter_8.txt  vec_2000m_profile_iter_9.txt
