[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cffdrs"
version = "0.0.2"
authors = [
  { name="Jordan Evens", email="jordan.evens@nrcan-rncan.gc.ca" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nrcan-cfs-fire/cffdrs_py"
"Bug Tracker" = "https://github.com/nrcan-cfs-fire/cffdrs_py/issues"
